# bookshare-calibre-plugin

./: .gitignore  README.md  build.sh  build_ui.py  debug.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
calibre-plugin/: __init__.py  bookshare.py  config.py  config_widget.ui  config_widget_ui.py
